compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Shared/_BottomMenu.cshtml.pp
<p>
  Website was built using <a href="https://www.github.com/wcpro/scaffeine">ScaffR</a>
</p>
